--- a/styletugas4.css
+++ b/styletugas4.css
@@ -53,7 +53,7 @@ a {color: cadetblue;
    line-height: 30px;
    padding: 20px;}
 
-.album taylor swift dari masa ke masa {width: 900px;
+.album {width: 900px;
     margin: 30px auto;}
 
 d1 img {background-color: aquamarine;
